--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{basar2025reflect,
   author = {Basar, Erkan and Sun, Xin and Hendrickx, Iris and {de Wit}, Jan and Bosse, Tibor and {de Bruijn}, Gert{-}Jan and Bosch, Jos and Krahmer, Emiel},
-  title = {How Well Can Large Language Models Reflect? A Human Evaluation of LLM-generated Reflections for Motivational Interviewing Dialogues.},
+  title = {How Well Can Large Language Models Reflect? A Human Evaluation of LLM-generated Reflections for Motivational Interviewing Dialogues},
   booktitle = {Proceedings of the 31st International Conference on Computational Linguistics (COLING)},
   year = {2025},
   publisher = {International Committee on Computational Linguistics},
@@ -29,9 +29,9 @@
   selected={true}
 }
 
-@article{he2024roby,
+@article{he2024effectiveness,
   author = {He, Linwei and Basar, Erkan and Krahmer, Emiel and Wiers, Reinout and Antheunis, Marjolijn},
-  title = {Effectiveness and user experience of a smoking cessation chatbot: A mixed-methods study comparing motivational interviewing and confrontational counseling},
+  title = {Effectiveness and User Experience of a Smoking Cessation Chatbot: Mixed Methods Study Comparing Motivational Interviewing and Confrontational Counseling},
   journal = {Journal of Medical Internet Research},
   year = {2024},
   volume = {26},
@@ -39,13 +39,12 @@
   doi = {10.2196/53134},
   pdf = {https://www.jmir.org/2024/1/e53134/PDF},
   abstract = {Background: Cigarette smoking poses a major public health risk. Chatbots may serve as an accessible and useful tool to promote cessation due to their high accessibility and potential in facilitating long-term personalized interactions. To increase effectiveness and acceptability, there remains a need to identify and evaluate counseling strategies for these chatbots, an aspect that has not been comprehensively addressed in previous research. <br><br>Objective: This study aims to identify effective counseling strategies for such chatbots to support smoking cessation. In addition, we sought to gain insights into smokers’ expectations of and experiences with the chatbot. <br><br>Methods: This mixed methods study incorporated a web-based experiment and semistructured interviews. Smokers (N=229) interacted with either a motivational interviewing (MI)–style (n=112, 48.9%) or a confrontational counseling–style (n=117, 51.1%) chatbot. Both cessation-related (ie, intention to quit and self-efficacy) and user experience–related outcomes (ie, engagement, therapeutic alliance, perceived empathy, and interaction satisfaction) were assessed. Semistructured interviews were conducted with 16 participants, 8 (50%) from each condition, and data were analyzed using thematic analysis. <br><br>Results: Results from a multivariate ANOVA showed that participants had a significantly higher overall rating for the MI (vs confrontational counseling) chatbot. Follow-up discriminant analysis revealed that the better perception of the MI chatbot was mostly explained by the user experience–related outcomes, with cessation-related outcomes playing a lesser role. Exploratory analyses indicated that smokers in both conditions reported increased intention to quit and self-efficacy after the chatbot interaction. Interview findings illustrated several constructs (eg, affective attitude and engagement) explaining people’s previous expectations and timely and retrospective experience with the chatbot. <br><br>Conclusions: The results confirmed that chatbots are a promising tool in motivating smoking cessation and the use of MI can improve user experience. We did not find extra support for MI to motivate cessation and have discussed possible reasons. Smokers expressed both relational and instrumental needs in the quitting process. Implications for future research and practice are discussed.},
-  bibtex_show = {true},
-  selected={true}
+  bibtex_show = {true}
 }
 
 @inproceedings{he2024exploring,
   author = {He, Linwei and Braggaar, Anouck and Basar, Erkan and Krahmer, Emiel and Antheunis, Marjolijn and Wiers, Reinout},
-  title = {Exploring user engagement through an interaction lens: what textual cues can tell us about human-chatbot interactions},
+  title = {Exploring User Engagement Through an Interaction Lens: What Textual Cues Can Tell Us about Human-Chatbot Interactions},
   booktitle = {Proceedings of the 6th ACM Conference on Conversational User Interfaces (CUI)},
   year = {2024},
   publisher = {Association for Computing Machinery},
@@ -61,14 +60,14 @@
 
 @inproceedings{basar2023hyleca,
   author = {Basar, Erkan and Balaji, Divyaa and He, Linwei and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
-  title = {Hy{LECA}: A Framework for Developing Hybrid Long-Term Engaging Controlled Conversational Agents},
+  title = {Hy{LECA}: A Framework for Developing Hybrid Long-term Engaging Controlled Conversational Agents},
   booktitle = {Proceedings of the 5th ACM Conference on Conversational User Interfaces (CUI)},
   year = {2023},
   publisher = {Association for Computing Machinery},
   articleno = {56},
   series = {CUI '23},
   doi = {10.1145/3571884.3604404},
-  pdf = {https://dl.acm.org/doi/pdf/10.1145/3571884.3604404},
+  pdf = {https://repository.ubn.ru.nl/bitstream/handle/2066/296306/1/296306.pdf},
   abstract = {We present HyLECA, an open-source framework designed for the development of long-term engaging controlled conversational agents. HyLECA’s dialogue manager employs a hybrid architecture, combining rule-based methods for controlled dialogue flows with retrieval-based and generation-based approaches to enhance the utterance variability and flexibility. The motivation behind HyLECA lies in enhancing user engagement and enjoyment in task-oriented chatbots by leveraging the natural language generation capabilities of open-domain large language models within the confines of predetermined dialogue flows. Moreover, we discuss the technical capabilities, potential applications, relevance, and adaptability of the system. Lastly, we report preliminary findings from integrating state-of-the-art large language models in simulating a conversation centred on smoking cessation.},
   bibtex_show = {true},
   selected={true}
@@ -78,7 +77,7 @@
 
 @article{he2022chatbots,
   author = {He, Linwei and Basar, Erkan and Wiers, Reinout W and Antheunis, Marjolijn L and Krahmer, Emiel},
-  title = {Can chatbots help to motivate smoking cessation? A study on the effectiveness of motivational interviewing on engagement and therapeutic alliance},
+  title = {Can Chatbots Help to Motivate Smoking Cessation? A Study on the Effectiveness of Motivational Interviewing on Engagement and Therapeutic Alliance},
   journal = {BMC Public Health},
   year = {2022},
   publisher = {Springer},
@@ -89,7 +88,7 @@
   bibtex_show = {true}
 }
 
-@inproceedings{basar2022hipw,
+@inproceedings{basar2022hints,
   author = {Basar, Erkan and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
   title = {Hints of Independence in a Pre-scripted World: On Controlled Usage of Open-domain Language Models for Chatbots in Highly Sensitive Domains},
   booktitle = {Proceedings of the 14th International Conference on Agents and Artificial Intelligence (ICAART)},
@@ -104,7 +103,7 @@
 
 @article{homberg2022impact,
   author = {{van den Homberg}, Marc and Margutti, Jacopo and Basar, Erkan and Wagemaker, Jurjen},
-  title = {Enriching impact data by mining digital media},
+  title = {Enriching Impact Data by Mining Digital Media},
   journal = {UN Global Assessment Report on Disaster Risk Reduction},
   year = {2022},
   html = {https://www.undrr.org/publication/enriching-impact-data-mining-digital-media},
@@ -117,7 +116,7 @@
 
 @inproceedings{hendrickx2021pica,
   author = {Hendrickx, Iris and Cena, Federica and Basar, Erkan and Di Caro, Luigi and Kunneman, Florian and Musi, Elena and Musto, Cataldo and Rapp, Amon and van Waterschoot, Jelte},
-  title = {Towards a New generation of Personalized Intelligent Conversational Agents},
+  title = {Towards a New Generation of Personalized Intelligent Conversational Agents},
   booktitle = {Adjunct Proceedings of the 29th ACM Conference on User Modeling, Adaptation and Personalization},
   year = {2021},
   publisher = {Association for Computing Machinery},
@@ -133,7 +132,7 @@
 
 @article{debruijn2020flood,
   author = {{de Bruijn}, Jens and {de Moel}, Hans and Weerts, Albrecht and {de Ruiter}, Marleen and Basar, Erkan and Eilander, Dirk and Aerts, Jeroen},
-  title = {Improving the classification of flood tweets with contextual hydrological information in a multimodal neural network},
+  title = {Improving the Classification of Flood Tweets with Contextual Hydrological Information in a Multimodal Neural Network},
   journal = {Computers \& Geosciences},
   year = {2020},
   publisher = {Elsevier},
@@ -161,7 +160,7 @@
 
 @inproceedings{bischke2019satellite,
   author = {Bischke, Benjamin and Helber, Patrick and Brugman, Simon and Basar, Erkan and Zhao, Zhengyu and Larson, Martha A and Pogorelov, Konstantin},
-  title = {The Multimedia Satellite Task at MediaEval 2019.},
+  title = {The Multimedia Satellite Task at MediaEval 2019},
   booktitle = {Proceedings of the MediaEval 2019 Workshop},
   year = {2019},
   pdf = {https://ceur-ws.org/Vol-2670/MediaEval_19_paper_7.pdf},
@@ -171,7 +170,7 @@
 
 @inproceedings{basar2019comparative,
   author = {Basar, Erkan and Ekiz, Simge and {van den Bosch}, Antal},
-  title = {A Comparative Study on Generalizability of Information Extraction Models on Protest News.},
+  title = {A Comparative Study on Generalizability of Information Extraction Models on Protest News},
   booktitle = {Working Notes of the Conference and Labs of the Evaluation Forum},
   year = {2019},
   pdf = {https://ceur-ws.org/Vol-2380/paper_129.pdf},
@@ -181,7 +180,7 @@
 
 % ------------------- 2017
 
-@inproceedings{hurriyetoglu2017support,
+@inproceedings{hurriyetoglu2017supporting,
   author = {Hurriyetoglu, Ali and Oostdijk, Nelleke and Basar, Erkan and {van den Bosch}, Antal},
   title = {Supporting Experts to Handle Tweet Collections About Significant Events},
   booktitle = {Natural Language Processing and Information Systems (NLDB)},
@@ -191,5 +190,17 @@
   doi = {10.1007/978-3-319-59569-6_14},
   pdf = {https://repository.ubn.ru.nl/bitstream/handle/2066/181001/181001.pdf},
   abstract = {We introduce Relevancer that processes a tweet set and enables generating an automatic classifier from it. Relevancer satisfies information needs of experts during significant events. Enabling experts to combine automatic procedures with expertise is the main contribution of our approach and the added value of the tool. Even a small amount of feedback enables the tool to distinguish between relevant and irrelevant information effectively. Thus, Relevancer facilitates the quick understanding of and proper reaction to events presented on Twitter.},
+  bibtex_show = {true}
+}
+
+% ------------------- 2014
+
+@inproceedings{turk2014android,
+  author = {Turk, Erdem and Basar, Erkan and Multu, Osman and Karaarslan, Enis},
+  title = {Android Mobile Application for Universities and Development Process},
+  booktitle = {Akademik Bilişim Conference},
+  year = {2014},
+  pdf = {https://ab.org.tr/ab14/bildiri/227.pdf},
+  abstract = {The purpose of this study is to share the experience gained by Muğla Sıtkı Koçman University Android Group in the development process of university information system mobile application. For this purpose; the technologies used and program codes are given and the sections of the application are explained. Graphic design and planned new features of the application are mentioned. New technological developments in battery management, security and privacy are also presented.},
   bibtex_show = {true}
 }
