added news/blog post links to publications and rearranged publication buttons

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,7 @@
   pages = {41--52},
   doi = {10.18653/v1/2024.hucllm-1.4},
   pdf = {https://aclanthology.org/2024.hucllm-1.4.pdf},
+  blog = {hcllm-acl2024},
   abstract = {Motivational Interviewing is a counselling style that requires skillful usage of reflective listening and engaging in conversations about sensitive and personal subjects. In this paper, we investigate to what extent we can use generative large language models in motivational interviewing chatbots to generate precise and variable reflections on user responses. We conduct a two-step human evaluation where we first independently assess the generated reflections based on four criteria essential to health counseling; appropriateness, specificity, naturalness, and engagement. In the second step, we compare the overall quality of generated and human-authored reflections via a ranking evaluation. We use GPT-4, BLOOM, and FLAN-T5 models to generate motivational interviewing reflections, based on real conversational data collected via chatbots designed to provide support for smoking cessation and sexual health. We discover that GPT-4 can produce reflections of a quality comparable to human-authored reflections. Finally, we conclude that large language models have the potential to enhance and expand reflections in predetermined health counseling chatbots, but a comprehensive manual review is advised.},
   bibtex_show = {true},
   selected={true}
