minor bibliography change

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
 @inproceedings{basar2024extent,
   author = {Basar, Erkan and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
   title = {To What Extent Are Large Language Models Capable of Generating Substantial Reflections for Motivational Interviewing Counseling Chatbots? A Human Evaluation},
-  booktitle = {Proceedings of the 1st Human-Centered Large Language Modeling Workshop},
+  booktitle = {Proceedings of the 1st Human-Centered Large Language Modeling Workshop in ACL},
   year = {2024},
   publisher = {Association for Computational Linguistics},
   pages = {41--52},
@@ -172,7 +172,7 @@
 @inproceedings{basar2019comparative,
   author = {Basar, Erkan and Ekiz, Simge and {van den Bosch}, Antal},
   title = {A Comparative Study on Generalizability of Information Extraction Models on Protest News},
-  booktitle = {Working Notes of the Conference and Labs of the Evaluation Forum},
+  booktitle = {Working Notes of the Conference and Labs of the Evaluation Forum (CLEF)},
   year = {2019},
   pdf = {https://ceur-ws.org/Vol-2380/paper_129.pdf},
   abstract = {Information Extraction applications can help social scientists to obtain necessary information to understand the reasons behind certain social dynamics. Many recent state-of-the-art information extraction approaches are based on supervised machine learning which can recognize information that has similar patterns with previously shown ones. Recognizing relevant information with never-shown patterns, however, is still a challenging task. In this study, we design a Recurrent Neural Network (RNN) architecture employing ELMo embeddings and Residual Bidirectional Long-Short Term Memory layers to overcome this challenge in the context of CLEF 2019 ProtestNews shared task. Furthermore, we train a classical Conditional Random Fields (CRF) model as our strong baseline to display a contrast between a state-of-the-art classical machine learning approach and a recent neural network method both in performance and in generalizability. We show that RNN model outperforms classical CRF model and shows a better promise on generalizability.},
