--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,19 @@
   selected={true}
 }
 
+@article{he2025chatting,
+  author = {He, Linwei and Basar, Erkan and Wiers, Reinout and Antheunis, Marjolijn and Krahmer, Emiel},
+  title = {Chatting your way to quitting: A longitudinal exploration of smokers' interaction with a cessation chatbot},
+  journal = {Internet Interventions},
+  year = {2025},
+  volume = {39},
+  pages = {100806},
+  doi = {10.1016/j.invent.2025.100806},
+  pdf = {https://www.sciencedirect.com/science/article/pii/S2214782925000077/pdfft?md5=99f51081a87498a04b76aec5bca3cf24&pid=1-s2.0-S2214782925000077-main.pdf},
+  abstract = {Background: Cigarette smoking poses a major public health risk, requiring scalable and accessible interventions. Chatbots offer a promising solution, given their potential in providing personalized, long-term interactions. Despite their promise, limited research has examined their efficacy and the intertwined relationship between user experience and effectiveness over an extended period of time. <br><br>Methods: In this prospective, single-arm study, we developed and evaluated Roby, a 5-session chatbot intervention incorporating motivational interviewing and cognitive behavioral therapy to help smokers quit. Roby engaged Dutch adult smokers (N = 102) in conversations covering topics such as setting a quit date, managing withdrawal and cravings, and relapse prevention. The primary outcome was the continuous abstinence rate at the end of the intervention, and secondary outcomes included 7-day point prevalence abstinence, self-efficacy, and cravings. User engagement, therapeutic alliance, and interaction satisfaction were measured weekly, and the trajectory was analyzed using Linear Mixed Models. <br><br>Results: Following an intention-to-treat principle, 18.6 % of participants achieved continuous abstinence, and 37.3 % achieved 7-day point prevalence abstinence. Self-efficacy significantly improved over the intervention, and cravings decreased over time. A slight decreasing trend was observed in engagement and satisfaction, likely due to a novelty effect. However, the decrease did not affect the intervention's outcomes. <br><br>Conclusion: This study demonstrates the feasibility and initial usefulness of Roby, highlighting the potential for chatbots in long-term cessation support. Future research should further validate these findings with randomized controlled trials. Additional efforts should focus on monitoring and maintaining user experience in the long term to enhance effectiveness.},
+  bibtex_show = {true},
+}
+
 % ------------------- 2024
 
 @inproceedings{basar2024extent,
