updated the bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,19 @@
 
+% ------------------- 2026
+
+@article{basar2026autonomy,
+  author = {Basar, Erkan and Balaji, Divyaa and He, Linwei and Haselager, Pim},
+  title = {Autonomy-supporting chatbots: Endorsing volitional behavior change},
+  journal = {Ethics and Information Technology},
+  year = {2026},
+  publisher = {Springer},
+  volume = {28},
+  number = {11},
+  doi = {10.1007/s10676-025-09877-8},
+  abstract = {Artificial intelligence (AI) applications have become more pervasive, and can have a myriad of effects on society. This has raised discussions regarding their potential ethical consequences. One application of AI is to help people improve their lifestyle choices and engage in positive behavior change. In the design of such applications, it becomes important to recognize the potential impact that they can have on human autonomy. Human autonomy is a widely discussed topic across various fields of AI applications. It is essential to recognize that human autonomy is a complex concept that requires a nuanced understanding of diverse individuals and their levels of volition. Overall, we argue that chatbots, in the domain of health and lifestyle choices, need to incorporate a capacity to communicate with users about their goals, intentions and reasons for making certain choices, and suggest a way of doing that.},
+  bibtex_show = {true},
+}
+
 % ------------------- 2025
 
 @inproceedings{basar2025reflect,
@@ -99,6 +114,7 @@
   year = {2022},
   publisher = {Springer},
   volume = {22},
+  number = {1},
   doi = {10.1186/s12889-022-13115-x},
   pdf = {https://bmcpublichealth.biomedcentral.com/counter/pdf/10.1186/s12889-022-13115-x.pdf},
   abstract = {Background: Cigarette smoking poses a major threat to public health. While cessation support provided by healthcare professionals is effective, its use remains low. Chatbots have the potential to serve as a useful addition. The objective of this study is to explore the possibility of using a motivational interviewing style chatbot to enhance engagement, therapeutic alliance, and perceived empathy in the context of smoking cessation. <br><br>Methods: A preregistered web-based experiment was conducted in which smokers (n = 153) were randomly assigned to either the motivational interviewing (MI)-style chatbot condition (n = 78) or the neutral chatbot condition (n = 75) and interacted with the chatbot in two sessions. In the assessment session, typical intake questions in smoking cessation interventions were administered by the chatbot, such as smoking history, nicotine dependence level, and intention to quit. In the feedback session, the chatbot provided personalized normative feedback and discussed with participants potential reasons to quit. Engagement with the chatbot, therapeutic alliance, and perceived empathy were the primary outcomes and were assessed after both sessions. Secondary outcomes were motivation to quit and perceived communication competence and were assessed after the two sessions. <br><br> Results: No significant effects of the experimental manipulation (MI-style or neutral chatbot) were found on engagement, therapeutic alliance, or perceived empathy. A significant increase in therapeutic alliance over two sessions emerged in both conditions, with participants reporting significantly increased motivation to quit. The chatbot was perceived as highly competent, and communication competence was positively associated with engagement, therapeutic alliance, and perceived empathy. <br><br>Conclusion: The results of this preregistered study suggest that talking with a chatbot about smoking cessation can help to motivate smokers to quit and that the effect of conversation has the potential to build up over time. We did not find support for an extra motivating effect of the MI-style chatbot, for which we discuss possible reasons. These findings highlight the promise of using chatbots to motivate smoking cessation. Implications for future research are discussed.},
