minor changes on old news items

--- a/_posts/2024-08-15-hcllm-acl2024.md
+++ b/_posts/2024-08-15-hcllm-acl2024.md
@@ -59,6 +59,7 @@ Basar, E., Hendrickx, I., Krahmer, E., de Bruijn, G., & Bosse, T. (2024). [To Wh
     </div>
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.liquid loading="eager" path="assets/img/posts/2024-08-15/2.png" class="img-fluid rounded z-depth-1" zoomable=true %}
+        <i>The poster presented.</i>
     </div>
     <div class="col-sm mt-3 mt-md-0"></div>
 </div>
