minor changes and editions on previous news items

--- a/_posts/2025-02-03-etmaal2025.md
+++ b/_posts/2025-02-03-etmaal2025.md
@@ -3,7 +3,7 @@ layout: post
 title: Presentation at Etmaal 2025
 date: 2025-02-03 23:59:59
 description: I had the chance to discuss our hybrid chatbot development framework and share insights from our human evaluation studies on using large language models in health-promoting chatbots at ETMAAL 2025.
-tags: talk
+tags: conference
 categories: presentation
 thumbnail: assets/img/posts/2025-02-03/thumbnail.jpg
 featured: false
