added news item Publication at Ethics and Information Technology

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   volume = {28},
   number = {11},
   doi = {10.1007/s10676-025-09877-8},
+  blog = {news/2025/ethics-information-technology},
   abstract = {Artificial intelligence (AI) applications have become more pervasive, and can have a myriad of effects on society. This has raised discussions regarding their potential ethical consequences. One application of AI is to help people improve their lifestyle choices and engage in positive behavior change. In the design of such applications, it becomes important to recognize the potential impact that they can have on human autonomy. Human autonomy is a widely discussed topic across various fields of AI applications. It is essential to recognize that human autonomy is a complex concept that requires a nuanced understanding of diverse individuals and their levels of volition. Overall, we argue that chatbots, in the domain of health and lifestyle choices, need to incorporate a capacity to communicate with users about their goals, intentions and reasons for making certain choices, and suggest a way of doing that.},
   bibtex_show = {true},
 }
