various minor changes in content

--- a/_posts/2021-06-25-pica2021.md
+++ b/_posts/2021-06-25-pica2021.md
@@ -2,9 +2,9 @@
 layout: post
 title: Organizing PICA 2021
 date: 2021-06-25 23:59:59
-description: I participated in organizing the Personalized Intelligent Conversational Agents workshop, co-located with the ACM Conference on User Modeling, Adaptation, and Personalization.
+description: I participated in organizing the Personalized Intelligent Conversational Agents workshop as part of the 29th ACM Conference on User Modeling, Adaptation, and Personalization.
 tags: workshop
-categories: organisation
+categories: organization
 thumbnail: assets/img/posts/2021-06-25/thumbnail.jpg
 featured: false
 ---
