changed how the bibliography buttons displayed

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
   year = {2025},
   publisher = {Association for Computational Linguistics},
   pages = {1964--1982},
-  html = {https://aclanthology.org/2025.coling-main.135/},
+  website = {https://aclanthology.org/2025.coling-main.135/},
   pdf = {https://aclanthology.org/2025.coling-main.135.pdf},
   blog = {news/2025/coling2025},
   abstract = {Motivational Interviewing (MI) is a counseling technique that promotes behavioral change through reflective responses to mirror or refine client statements. While advanced Large Language Models (LLMs) can generate engaging dialogues, challenges remain for applying them in a sensitive context such as MI. This work assesses the potential of LLMs to generate MI reflections via three LLMs: GPT-4, Llama-2, and BLOOM, and explores the effect of dialogue context size and integration of MI strategies for reflection generation by LLMs. We conduct evaluations using both automatic metrics and human judges on four criteria: appropriateness, relevance, engagement, and naturalness, to assess whether these LLMs can accurately generate the nuanced therapeutic communication required in MI. While we demonstrate LLMs' potential in generating MI reflections comparable to human therapists, content analysis shows that significant challenges remain. By identifying the strengths and limitations of LLMs in generating empathetic and contextually appropriate reflections in MI, this work contributes to the ongoing dialogue in enhancing LLM`s role in therapeutic counseling.},
@@ -101,6 +101,7 @@
   series = {CUI '23},
   doi = {10.1145/3571884.3604404},
   pdf = {https://repository.ubn.ru.nl/bitstream/handle/2066/296306/1/296306.pdf},
+  code = {https://github.com/look-whos-talking-chatbots/hyleca},
   abstract = {We present HyLECA, an open-source framework designed for the development of long-term engaging controlled conversational agents. HyLECA’s dialogue manager employs a hybrid architecture, combining rule-based methods for controlled dialogue flows with retrieval-based and generation-based approaches to enhance the utterance variability and flexibility. The motivation behind HyLECA lies in enhancing user engagement and enjoyment in task-oriented chatbots by leveraging the natural language generation capabilities of open-domain large language models within the confines of predetermined dialogue flows. Moreover, we discuss the technical capabilities, potential applications, relevance, and adaptability of the system. Lastly, we report preliminary findings from integrating state-of-the-art large language models in simulating a conversation centred on smoking cessation.},
   bibtex_show = {true},
   selected={true}
@@ -140,7 +141,7 @@
   title = {Enriching Impact Data by Mining Digital Media},
   journal = {UN Global Assessment Report on Disaster Risk Reduction},
   year = {2022},
-  html = {https://www.undrr.org/publication/enriching-impact-data-mining-digital-media},
+  website = {https://www.undrr.org/publication/enriching-impact-data-mining-digital-media},
   pdf = {https://www.undrr.org/media/79967/download},
   abstract = {This contributing paper explores the opportunities offered by digital media mining to complement impact databases. Impact data on past disasters caused by natural hazards (in short, impact data) are of paramount importance for several applications. These include advocacy for investments in disaster risk reduction (DRR) and providing and evidence base for new policies. It is challenging, however, to create, sustain, and increase the adoption of an impact database with sufficient quality for different applications in humanitarian response and DRR. Online newspapers, both national and local ones, tend to cover small disasters more than some institutional databases that focus only on disasters above a particular threshold impact. Mining data from these sources offer a means to complement existing databases. This paper indicates that leading openly available databases have their different strengths and weaknesses. Mining digital newspapers helps shed light on data discrepancies given by different database. In the case studies, the enriched impact database was used to validate a hydrological model, particularly in defining triggers and improving monitoring. The study focused on sudden-onset disasters and further research will be needed to understand how mining can be used for slow-onset disasters such as droughts. Big data and modern information processing systems can also further improve operational excellence in humanitarian applications.},
   bibtex_show = {true}
@@ -184,7 +185,7 @@
   year = {2020},
   publisher = {European Language Resources Association},
   pages = {4343--4351},
-  html = {https://aclanthology.org/2020.lrec-1.535},
+  website = {https://aclanthology.org/2020.lrec-1.535},
   pdf = {https://aclanthology.org/2020.lrec-1.535.pdf},
   abstract = {We report on a case study of text and images that reveals the inadequacy of simplistic assumptions about their connection and interplay. The context of our work is a larger effort to create automatic systems that can extract event information from online news articles about flooding disasters. We carry out a manual analysis of 1000 articles containing a keyword related to flooding. The analysis reveals that the articles in our data set cluster into seven categories related to different topical aspects of flooding, and that the images accompanying the articles cluster into five categories related to the content they depict. The results demonstrate that flood-related news articles do not consistently report on a single, currently unfolding flooding event and we should also not assume that a flood-related image will directly relate to a flooding-event described in the corresponding article. In particular, spatiotemporal distance is important. We validate the manual analysis with an automatic classifier demonstrating the technical feasibility of multimedia analysis approaches that admit more realistic relationships between text and images. In sum, our case study confirms that closer attention to the connection between text and images has the potential to improve the collection of multimodal information from news articles.},
   bibtex_show = {true}
