run prettier to auto-fixed the code

--- a/_posts/2025-01-21-coling2025.md
+++ b/_posts/2025-01-21-coling2025.md
@@ -50,7 +50,6 @@ Basar, E., Sun, X., Hendrickx, I., de Wit, J., Bosse, T., de Bruijn, G., Bosch, 
 
 {% endtabs %}
 
-
 #### Images
 
 <div class="row mt-3">
@@ -67,4 +66,4 @@ Basar, E., Sun, X., Hendrickx, I., de Wit, J., Bosse, T., de Bruijn, G., Bosch, 
 
 ---
 
-Find and like this news on [<i class="fa-brands fa-linkedin"></i> LinkedIn](https://www.linkedin.com/posts/activity-7287450052569030656-5QAe){:target="_blank"}
+Find and like this news on [<i class="fa-brands fa-linkedin"></i> LinkedIn](https://www.linkedin.com/posts/activity-7287450052569030656-5QAe){:target="\_blank"}
