--- a/_posts/2024-08-15-hcllm-acl2024.md
+++ b/_posts/2024-08-15-hcllm-acl2024.md
@@ -50,7 +50,6 @@ Basar, E., Hendrickx, I., Krahmer, E., de Bruijn, G., & Bosse, T. (2024). [To Wh
 
 {% endtabs %}
 
-
 #### Images
 
 <div class="row mt-3">
@@ -66,4 +65,4 @@ Basar, E., Hendrickx, I., Krahmer, E., de Bruijn, G., & Bosse, T. (2024). [To Wh
 
 ---
 
-Find and like this news on [<i class="fa-brands fa-linkedin"></i> LinkedIn](https://www.linkedin.com/posts/activity-7228710764792954880-8-sY){:target="_blank"}
+Find and like this news on [<i class="fa-brands fa-linkedin"></i> LinkedIn](https://www.linkedin.com/posts/activity-7228710764792954880-8-sY){:target="\_blank"}
